--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -4,9 +4,9 @@ title: Use of satellite data for understanding and predicting oil sardine (*Sard
 author: ''
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
+  word_document: default
   pdf_document: default
   html_document: default
-  word_document: default
 header-includes:
 - \usepackage[labelformat=empty]{caption}
 - \usepackage{setspace}
@@ -29,7 +29,7 @@ bibliography: '`r system.file("docs", "Sardine.bib", package = "SardineForecast"
 
 The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest (Malabar) coast of India  and contributes to about 40% of the marine fish catch of the state of Kerala [@Srinath1998]. Landings of the oil  sardine  peak during, (June-Sept) and after (Oct-Dec), the summer monsoon period, in conjunction with the onset and early relaxation of coastal upwelling. However, the landings of this pelagic finfish are highly variable for reasons not well understood. Earlier researchers have indicated that the variable yields may be due to changing food sources and variable offshore habitats (needs reference and better explanation). However, Longhurst and Wooster [-@LonghurstWooster1990] described a decadal variability in sardine abundance on the Malabar coast and established a significant positive correlation with sea level, upwelling intensity, sea surface temperature, and rainfall. 
 
-The life cycle (include graphic of the life-cycle) of the oil sardine fishery begins with the entry of adult fish into the inshore areas during June – July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969] and restricted along the narrow strip of the western India continental shelf, within 20 km from the shore. The fish migrate from offshore to coastal waters and vice versa coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favourable for their inshore migration [@Chidambaram1950]. According to Nair et al. [-@Nairetal2016], the exact location of oil sardine spawning grounds along the Indian coastline is still unclear; however, it is generally believed that the spawning of oil sardine occurs during the southwest monsoon period (Jun-Jul) when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008], although some studies suggest that spawning can occur as late as  September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970].
+The life cycle (include graphic of the life-cycle) of the oil sardine fishery begins with the entry of adult fish into the inshore areas during June – July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969] and restricted along the narrow strip of the western India continental shelf, within 20 km from the shore. The fish migrate from offshore to coastal waters and vice versa coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favorable for their inshore migration [@Chidambaram1950]. According to Nair et al. [-@Nairetal2016], the exact location of oil sardine spawning grounds along the Indian coastline is still unclear; however, it is generally believed that the spawning of oil sardine occurs during the southwest monsoon period (Jun-Jul) when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008], although some studies suggest that spawning can occur as late as  September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970].
 
 After eggs are spawned, they develop rapidly into larvae within 24 hrs [@Nair1959].  Variation in the bloom initiation time and intensity lead to changes in the food supply to sardine larvae and corresponding changes in their growth rate and survival and the later recruitment of sardines into the fishery [@Georgeetal2012].  The phytoplankton bloom that provides for sardine larvae food is dependent upon coastal upwelling.    Oil sardines grow rapidly during the first few months and mature to full size during the first 2.5 years. 
 
@@ -45,7 +45,7 @@ In this paper, we revisit the analysis of environmental covariates that correlat
 
 Being land-locked to the north, the northern Indian Ocean is the only part of the world oceans that is not connected to the polar region and lies entirely in the tropics. It also experiences exclusively the seasonally reversing monsoon that is coupled with processes in the Pacific Ocean [@Websteretal1999]. The western Arabian Sea that experiences high atmospheric pressure during most of the year, lies adjacent to the Horn of Africa as well as the Arabian peninsula. This results in the Aeolian transport (referred to as Shamal activity) to the basin as well as persistent upwelling off-Somalia and along the coast of Yemen [@Raoetal2003; @Preusseretal2002; @Singhetal2008]. High plankton biomass, resulting in elevated productivity in this region is advected towards central Arabian Sea through Ekman pumping. This process is intensified during ISM and during the early spring-bloom period in February through March. A persistent Oxygen Minimum Zone (OMZ) in the north and central Arabian Sea basin results in large net-export of CO2 from waters to the atmosphere [@Sarmaetal1998; @Naqvietal2000; @Kumaretal2001]. Often this coastal productivity affects to the OMZ and vice-a-versa [@Devoletal2006]. Monsoonal reversal of winds and, in turn, coastal currents, along with high amount of river discharge, generates high degrees of variability in the productivity induced from either mixing or upwelling in the eastern Arabian Sea [@SarupriaBhargava1993; @SrinivasDineshkumar2006; @Habeebrehmanetal2008; @Jayarametal2010; @Chauhanetal2011; @JoshiRao2012; @Guptaetal2016].
 
-In this work, we focus on the the southeastern Arabian Sea (SEAS) (Figure `r ref("fig:studyarea")`). The SEAS has relatively narrow continental shelf on the western shoreline of the Indian peninsula and is influenced by ISM as well as IWM and tidal interactions as well as discharge from multiple rivers [@Shetyeetal1995; @Oasim2003; @Menonetal2005]. This region also recurrently witnesses intense spring blooms of Trichodesmium spp. This, along with coastal current dynamics, upwelling and high rainfall, results in high coastal productivity with surface chlorophyll values up to 32-39 mg m-3 off the Kerala coast [@Madhupratapetal2001; @Jayarametal2010; @Raghavanetal2010; @Chauhanetal2011]. The SEAS also experience high chlorophyll concentration s(~40 mg m-2) and net primary productivity (~1300 mgC m-2 d-1) off Kochi during summer upwelling [@Guptaetal2016].  In the southern SEAS coastal waters off Kochi, extreme variability in productivity during the ISM (40-1225 mgCm-2d-1), post-ISM (21-263 mgCm-2d-1) and during intermonsoon period (12-648 mgCm-2d-1) have been observed [@SarupriaBhargava1993; @SrinivasDineshkumar2006; @Habeebrehmanetal2008; @Jayarametal2010; @JoshiRao2012; @Guptaetal2016].
+In this work, we focus on the the southeastern Arabian Sea (SEAS) (Figure `r ref("fig:studyarea")`). The SEAS has relatively narrow continental shelf on the western shoreline of the Indian peninsula and is influenced by ISM as well as IWM and tidal interactions as well as discharge from multiple rivers [@Shetyeetal1995; @Oasim2003; @Menonetal2005]. This region also recurrently witnesses intense spring blooms of Trichodesmium spp. This, along with coastal current dynamics, upwelling and high rainfall, results in high coastal productivity with surface chlorophyll values up to 32-39 mg m-3 off the Kerala coast [@Madhupratapetal2001; @Jayarametal2010; @Raghavanetal2010; @Chauhanetal2011]. The SEAS also experience high chlorophyll concentration s(~40 mg m-2) and net primary productivity (~1300 mgC m-2 d-1) off Kochi during summer upwelling [@Guptaetal2016].  In the southern SEAS coastal waters off Kochi, extreme variability in productivity during the ISM (40-1225 mgCm-2d-1), post-ISM (21-263 mgCm-2d-1) and during inter-monsoon period (12-648 mgCm-2d-1) have been observed [@SarupriaBhargava1993; @SrinivasDineshkumar2006; @Habeebrehmanetal2008; @Jayarametal2010; @JoshiRao2012; @Guptaetal2016].
 
 # Hypotheses concerning correlation between covariate and catches
 
@@ -55,9 +55,9 @@ Spawning occurs during the summer monsoon, primarily during quarter 3.  During t
 
 * Precipitation low or high during either the summer monsoon (June-July) or pre-monsoon (Apr-May) is associated with low spawning.
 
-* Low sea surface temperature is associated with delayed and limited spawning in Pacific sardines (Jacobson and MacCall 1995).  The reasons for this may be behavioral as low temperature as associated with poor survival of larvae.  Larval mortality rates may be higher in colder water due to increased zooplankton predation and upwelling (associated with cold surface temperatures) advects larvae into offshore waters.
+* Low sea surface temperature is associated with delayed and limited spawning in Pacific sardines [@JacobsonMacCall1995].  The reasons for this may be behavioral as low temperature as associated with poor survival of larvae.  Larval mortality rates may be higher in colder water due to increased zooplankton predation and upwelling (associated with cold surface temperatures) advects larvae into offshore waters.
 
-* In addition to advection of larvae offshore, upwelling brings low oxygen water to the surface which discourages inshore migration to coastal spawning areas.  Thus due to both lower SST and lower dissolved oxygen, strong upwelling during the spawning season is expected to be negatively associated with the spawning biomass in the nearshore region.
+* In addition to advection of larvae offshore, upwelling brings low oxygen water to the surface which discourages inshore migration to coastal spawning areas.  Thus due to both lower SST and lower dissolved oxygen, strong upwelling during the spawning season is expected to be negatively associated with the spawning biomass in the near-shore region.
 
 * Salinity is also associated with spawning initiation; however we do not have long-term salinity data.
 
@@ -90,7 +90,8 @@ Quarterly fish landing data have been collected by the Central Marine Fisheries 
 ## Covariate data
 
 We analysed monthly composites of the following environmental data derived from satellites: Sea Surface Temperature (SST), chlorophyll-a (CHL), upwelling (UPW) and precipitation. Sea surface temperature: For 1981 to 2002, we used Pathfinder Version 5.2 product on a 4km grid, and for 2003 to 2016, we used Advanced Very-High Resolution Radiometer (AVHRR) data at a 0.1 degree spatial scale.  Chlorophyll-a, we used SeaWiFS data on a 0.1 degree spatial scale for 1981 to 2002 and MODIS data from 2003 to 2017 at 0.05° spatial scale.  The SST and CHL data were averaged across thirteen 1 degree by 1 degree boxes which roughly parallel the bathymetry (Figure `r ref("fig:studyarea")`).  The SST and CHL satellite data were retrieved from the NOAA ERDDAP server (See the Appendices for full details).  
-For an index of coastal upwelling, we used the sea-surface temperature differential between near shore and 3 degrees offshore as described by Naidu et al. [-@Naiduetal1999] and Smitha et al. [-@Smithaetal2008].  The index is computed as the average SST in boxes 3 degrees offshore of boxes 1-5 in Figure `r ref("fig:studyarea")` minus the average SST in boxes 1-5.  For SST, we used the remote-sensing sea-surface temperature datasets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008].  
+
+For an index of coastal upwelling, we used the sea-surface temperature differential between near shore and 3 degrees offshore as described by Naidu et al. [-@Naiduetal1999] and Smitha et al. [-@Smithaetal2008].  The index is computed as the average SST in boxes 3 degrees offshore of boxes 1-5 in Figure `r ref("fig:studyarea")` minus the average SST in boxes 1-5.  For SST, we used the remote-sensing sea-surface temperature data sets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008].  
 
 The precipitation data were downloaded from two different sources.  The first was an estimate of the monthly precipitation over Kerala from land-based gauges.  This time series is available from the start of our landing data (1956).  The second was a remote-sensing precipitation product from the NOAA Global Precipitation Climatology Project.  This provides a precipitation estimate using a global 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.  These data are available from 1979 forward.  Full details on the precipitation data sets are available in the Appendices.  
 
@@ -111,7 +112,7 @@ Model selection was conducted in a step-wise fashion.  The length of the covaria
 
 ## Catches in prior seasons as explanatory variables
 
-There was support for including the post-spawning catch in the previous year as an explanatory variable for the catch during the spawning season (3rd quarter).  Models with $ln(N_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(N_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the catch in the spawning season.  This was done by comparing models with $ln(N_{t-1})$ included as a linear term or as a non-linear function $s(ln(N_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response.  The full set of models tested, including tests using catch during the spawning months in previous seasons as a covariate are shown in Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`.  The results were the same if we used the full landings dataset from 1956 to 2015 (Table `r ref("tabappA:spawner-model-1956", pre="A")`).  Overall, the landings in prior seasons was only weakly explanatory for the catch in the spawning months, and the maximum $R^2$ was less than 30% (Table `r ref("tab:spawner_model_selection")`).
+There was support for including the post-spawning catch in the previous year as an explanatory variable for the catch during the spawning season (3rd quarter).  Models with $ln(N_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(N_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the catch in the spawning season.  This was done by comparing models with $ln(N_{t-1})$ included as a linear term or as a non-linear function $s(ln(N_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response.  The full set of models tested, including tests using catch during the spawning months in previous seasons as a covariate are shown in Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`.  The results were the same if we used the full landings data set from 1956 to 2015 (Table `r ref("tabappA:spawner-model-1956", pre="A")`).  Overall, the landings in prior seasons was only weakly explanatory for the catch in the spawning months, and the maximum $R^2$ was less than 30% (Table `r ref("tab:spawner_model_selection")`).
 
 The results were similar for models of the landings  during the non-spawning months ($N_t$) of the sardine season (Table `r ref("tab:nonspawner-models")`).  The most supported model for $N_t$ used a non-linear response to landings during the non-spawning months of the previous season: $ln(N_t) \sim ln(N_{t-1})$ with a non-linear response to landings during the spawning months two seasons prior (Table `r ref("tab:nonspawner-models")`).  There was low support for including landings from the non-spawner months two seasons prior or for using the landings during the spawning months in the prior season (Tables `r ref("tabappA:nonspawner-model-time-a", pre="A")`, `r ref("tabappA:nonspawner-model-time-b", pre="A")`, and `r ref("tabappA:nonspawner-model-time-c", pre="A")`). 
 
@@ -146,7 +147,7 @@ Do a pilot analysis of chlorophyll however the data available are short and will
 
 Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4. Note that quarter 3 is July-Sept and that the fishery is closed July 1 to Aug 15, thus the fishery is only open 1.5 months in quarter 3. The per month catch rate is second highest in quarter 3 although total catch is lower in quarter 3.
 
-Figure `r ref("fig:studyarea")`. Close up of Kerala State with the latitude/longitude boxes used for the satellite data. Kerala State is marked in grey and the oil sardine catch from this region is being modelled.
+Figure `r ref("fig:studyarea")`. Close up of Kerala State with the latitude/longitude boxes used for the satellite data. Kerala State is marked in grey and the oil sardine catch from this region is being modeled.
 
 Figure `r ref("fig:seiocurrents")`.  Key currents and circulation patterns in the Indian Ocean that affect winter and summer monsoon associated upwelling.
 
@@ -164,20 +165,27 @@ Figure `r ref("fig:SSTts")`.  Monthly average sea surface temperature (SST) off 
 
 Figure `r ref("fig:cov-effects")`.  Effects of covariates estimated from the GAM models. Panel A) Effect of SST during the spawning months (Jul-Sep) on catch during the spawning months.  Low SST is associated with lower that expected catch during the spawning months.  Panel B) Effect of upwelling (inshore/off-shore SST differential) during Jan-Mar of the prior season on catch during the next spawning months (Jul-Sep).  The index is the difference between offshore and inshore SST, thus a negative value indicates warmer coastal surface water than off-shore.  Warm coastal water during Jan-Mar when sardines are foraging along the coast, is associated with lower catch during the next spawning season.  Panel C) Effect of SST during the spawning months (Jul-Sep) on catch during the subsequent non-spawning months (Oct-Jun).  Low SST is associated with lower that expected catch during the following non-spawning months.  Panel D) Effect of upwelling (inshore/off-shore SST differential) during Oct-Dec of the prior season on catch during the non-spawning months (Oct-Jun) the next season.  Strong upwelling (positive upwelling index) in the early larval and juvenile period (Oct-Dec) is associated with higher than expected catch in the next season.
 
-Figure `r ref("fig:fittedmodel")`.  Fitted versus observed catch in the spawning period from the best covariate model.  [*missing*]
-
-#
+Figure `r ref("fig:fitted")`.  Fitted versus observed catch with models with and without environmental covariates.  Panel A) Fitted versus observed log catch in the spawning months with only non-spawning catch in the previous season as the covariate: $S_t = s(N_{t-1}) + \epsilon$. Panel B) Fitted versus observed log catch in the spawning months with Jan-Mar upwelling in the prior season added as a covariate to the model: $s(V_{t-1})$. Panel C) Fitted versus observed log catch in the non-spawning months with only non-spawning catch in the previous season and spawning catch two season prior as the covariates: $N_t = s(N_{t-1}) + s(S_{t-2}) + \epsilon$. Panel D) Fitted versus observed log catch in the non-spawning months with current season SST in Jul-Sep ($V$) and Oct-Dec upwelling in the prior season ($W$) added as covariates: $s(V_t) + \beta W_{t-1}$.  $W$ was added linearly since the data were insufficient to estimate four non-linear effects.
 
 ```{r, results="asis", echo=FALSE}
 cat("\\clearpage")
 ```
 
-#
-
 ```{r child = 'Tables.Rmd', echo=FALSE}
 ```
 
-#
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+```{r child = 'Figures.Rmd', echo=FALSE}
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+# Appendices
 
 ```{r, results="asis", echo=FALSE}
 cat("\\clearpage")
