--- a/setup.Rmd
+++ b/setup.Rmd
@@ -115,7 +115,9 @@ rm(dat) #make sure I don't accidentally forget to define dat
 ```
 
 ```{r message=FALSE,warning=FALSE, echo=FALSE}
-covnames = c("log.CHL.4.mon1to3.", "log.CHL.4.mon7to9.", "log.CHL.4.mon10to12.")
+covnames = c("log.CHL.4.mon1to3.", "log.CHL.4.mon7to9.", "log.CHL.4.mon10to12.",
+             "log.CHL.3.mon1to3.", "log.CHL.3.mon7to9.", "log.CHL.3.mon10to12.",
+             "log.CHL.5.mon1to3.", "log.CHL.5.mon7to9.", "log.CHL.5.mon10to12.")
 #set up to use consistent data
 dat=fullrespdat[,c("Year", "spawners0", "nspawners0", "nspawners1", "spawners2", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
 dat=na.omit(dat)
